<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.MainActivity"
	android:padding="10dp">

	<Button
		android:id="@+id/btnShowToast"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:text="@string/btn_show_toast"/>

	<EditText
		android:id="@+id/etUserMessage"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="160dp"
		android:ems="10"
		android:hint="@string/et_enter_msg"
		android:inputType="textPersonName"/>

	<Button
		android:id="@+id/btnSendToNextActivity"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:text="@string/btn_move_to_next_activity"/>

	<Button
		android:id="@+id/btnShareToOtherApps"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="174dp"
		android:text="@string/btn_share_to_apps"/>

	<Button
		android:id="@+id/btnShowHobbiesList"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_centerHorizontal="true"
		android:layout_marginBottom="47dp"
		android:text="@string/btn_hobbies"/>

</RelativeLayout>
